Modified source to work with Android SDK 2.1.